// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardItem should render component correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 4,
      "paddingTop": 4,
    }
  }
>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 28,
      }
    }
  >
    custom referral code
  </PeachText>
  <PeachText
    style={
      {
        "color": "#7D675E",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
        "marginRight": 8,
      }
    }
  >
    (
    100
    )
  </PeachText>
</View>
`;

exports[`RewardItem should render component correctly 2`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 4,
      "paddingTop": 4,
    }
  }
>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 28,
      }
    }
  >
    2x no Peach fees
  </PeachText>
  <PeachText
    style={
      {
        "color": "#7D675E",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
        "marginRight": 8,
      }
    }
  >
    (
    200
    )
  </PeachText>
</View>
`;

exports[`RewardItem should render component correctly 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 4,
      "paddingTop": 4,
    }
  }
>
  <PeachText
    style={
      {
        "fontFamily": "Baloo2-SemiBold",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 28,
      }
    }
  >
    sweet sweet sats
  </PeachText>
  <PeachText
    style={
      {
        "color": "#7D675E",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
        "marginRight": 8,
      }
    }
  >
    (
    &gt; 300
    )
  </PeachText>
</View>
`;
